Fix firefox menu cutoff issue

--- a/assets/main.css
+++ b/assets/main.css
@@ -87,7 +87,8 @@ p {
 }
 
 #nav a {
-	padding: 9px 12px;
+	padding: 0 12px;
+	line-height: 35px;
 	display: block;
 	border-bottom: 1px solid #111926;
 	color: #3fabab;
